test/asm/unterminated-interpolation.asm
def x = 10
println "{d:x", "!"
println "{v:x", "?"
println x, {d:x

def name equs "x"
println "{{name", "..."
println "{v:{name}}!"
println "{v:{name}?"
println "{v:{name}", "?"
println "{d:{v:name}}!?"
println "{d:{v:name}?!"
println "{d:{v:name}", "?!"
